# haskell

./: .gitignore  Makefile  haskell.cabal
src/: HaskellBook_05_145.hs  HaskellBook_15_SemigroupMonoid_10_Optional.hs  HaskellBook_15_SemigroupMonoid_12_Maybe.hs  Map.hs  adt-eval-numerical-expression.hs  aoc-2018-1.hs  aoc-2018-2.hs  aoc-2018-3.hs  aoc-2018-4.hs  aoc-2018-5.hs  aoc-2018-6.hs  aoc-2018-7.hs  aoc-2018-8.hs  approved.hs  cards.hs  exercism--Acronym.hs  exercism--BST.hs  exercism--Bob.hs  exercism--CollatzConjecture.hs  exercism--DNA.hs  exercism--LeapYear.hs  exercism--Pangram.hs  exercism--Prime.hs  exercism--SpaceAge.hs  graph.hs  hpffp-05.hs  hpffp-15-10-monoid-semigroup-bool.hs  hpffp-15-10-monoid-semigroup-optional.hs  hpffp-15-11-monoid-semigroup-madlib.hs  io-template.hs  liftA2.hs  map-and-foldr.hs  misc.hs  spreadsheet.hs  tapl-1.hs  type-constraint.hs  typeclassopedia-functor.hs  types.hs
