name:                haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       hspec,
                       split
  exposed-modules:     HaskellBook_15_SemigroupMonoid_10_Optional
